force-app/main/default/objects/base_events_MosaicUSPROD__dlm/base_events_MosaicUSPROD__dlm.object-meta.xml
<CustomObject>
    <label>Base Events_MosaicUSPROD</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Base Events_MosaicUSPROD</labelOverride>
        <masterLabel>Base Events_MosaicUSPROD</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>