force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>Action</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Action</labelOverride>
        <masterLabel>Action</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>