force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/emailAddress__c.field-meta.xml
<CustomField>
    <fullName>emailAddress__c</fullName>
    <label>Email Address</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Email Address</labelOverride>
        <masterLabel>Email Address</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>