force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/eventTime__c.field-meta.xml
<CustomField>
    <fullName>eventTime__c</fullName>
    <label>Event Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Event Time</labelOverride>
        <masterLabel>Event Time</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>