force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/flagPageView__c.field-meta.xml
<CustomField>
    <fullName>flagPageView__c</fullName>
    <label>Page View Flag</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Page View Flag</labelOverride>
        <masterLabel>Page View Flag</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>