force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/itemAction__c.field-meta.xml
<CustomField>
    <fullName>itemAction__c</fullName>
    <label>Item Action</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Item Action</labelOverride>
        <masterLabel>Item Action</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>