force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/profileId__c.field-meta.xml
<CustomField>
    <fullName>profileId__c</fullName>
    <label>Profile ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Profile ID</labelOverride>
        <masterLabel>Profile ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>