force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sfmcContactKey__c.field-meta.xml
<CustomField>
    <fullName>sfmcContactKey__c</fullName>
    <label>Salesforce Marketing Cloud Contact Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Salesforce Marketing Cloud Contact Key</labelOverride>
        <masterLabel>Salesforce Marketing Cloud Contact Key</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>