force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceApplication__c.field-meta.xml
<CustomField>
    <fullName>sourceApplication__c</fullName>
    <label>Source Application</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source Application</labelOverride>
        <masterLabel>Source Application</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>