force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceChannel__c.field-meta.xml
<CustomField>
    <fullName>sourceChannel__c</fullName>
    <label>Source Channel</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source Channel</labelOverride>
        <masterLabel>Source Channel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>