force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceDevice__c.field-meta.xml
<CustomField>
    <fullName>sourceDevice__c</fullName>
    <label>Source Device</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source Device</labelOverride>
        <masterLabel>Source Device</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>