force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceLocale__c.field-meta.xml
<CustomField>
    <fullName>sourceLocale__c</fullName>
    <label>Source Locale</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source Locale</labelOverride>
        <masterLabel>Source Locale</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>