force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceOperatingSystem__c.field-meta.xml
<CustomField>
    <fullName>sourceOperatingSystem__c</fullName>
    <label>Source Operating System</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source Operating System</labelOverride>
        <masterLabel>Source Operating System</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>