force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceOperatingSystemVersion__c.field-meta.xml
<CustomField>
    <fullName>sourceOperatingSystemVersion__c</fullName>
    <label>Source OS Version</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source OS Version</labelOverride>
        <masterLabel>Source OS Version</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>