force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourcePageType__c.field-meta.xml
<CustomField>
    <fullName>sourcePageType__c</fullName>
    <label>Source Page Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source Page Type</labelOverride>
        <masterLabel>Source Page Type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>