force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceUrl__c.field-meta.xml
<CustomField>
    <fullName>sourceUrl__c</fullName>
    <label>Source URL</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source URL</labelOverride>
        <masterLabel>Source URL</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>