force-app/main/default/objects/base_events_MosaicUSPROD__dlm/fields/sourceUrlReferrer__c.field-meta.xml
<CustomField>
    <fullName>sourceUrlReferrer__c</fullName>
    <label>Source URL Referrer</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source URL Referrer</labelOverride>
        <masterLabel>Source URL Referrer</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>